// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSelector it renders an error when an error exists 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding: 16px;
  margin: 8px;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: 0 0.7px 2.2px -8px rgba(0,0,0,0.18),0 1.7px 5.4px rgba(0,0,0,0.129),0 3.1px 10.1px rgba(0,0,0,0.107),0 5.6px 18.1px rgba(0,0,0,0.09),0 10.4px 33.8px rgba(0,0,0,0.073),0 25px 81px rgba(0,0,0,0.051);
}

.c24 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c25 {
  min-width: 0;
  box-sizing: border-box;
}

.c27 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c28 {
  cursor: pointer;
  border: 1px solid status.fail.foreground;
  background-color: #1AD08F;
  border-color: status.fail.foreground;
  color: status.fail.foreground;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 100%;
  border-color: #660000;
  border-width: 1px;
  border-radius: 4px;
  background-color: transparent;
  color: #660000;
}

.c28:hover {
  opacity: 0.8;
}

.c8 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c22 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c10 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c11 {
  color: #5E26FF;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c21 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c26 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 800px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  color: #262626;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c12:hover {
  border-bottom: 2px solid #5E26FF;
}

.c17 {
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c17:hover {
  background: hsla(0,0%,90%,1);
  opacity: 1;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <ul
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        color="core.nearblack"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          overflow="hidden"
          width="100%"
        >
          <div
            class="c5"
            display="flex"
          >
            <div
              class="c6"
              color="core.white"
              display="flex"
              size="6"
            >
              <h3
                class="c7"
              >
                Ac
              </h3>
            </div>
            <h2
              class="c8"
              color="core.primary"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              Switch Accounts
            </h2>
          </div>
          <div
            class="c9"
          >
            <p
              class="c10"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
            </p>
            <p
              class="c11"
              color="core.primary"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Don't see an address you're looking for?
            </p>
            <p
              class="c10"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your seed phrase generates different addresses depending on whether it's connected to the Filecoin testnet or mainnet.
              <a
                class="c12"
                color="core.primary"
                font-size="2"
                href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
      </li>
    </ul>
    <ul
      class="c13"
    >
      <li
        class="c14"
        display="flex"
      >
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  0
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1z225 ... 6z6wgi
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  1
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb1uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  2
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb2uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  3
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb3uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  4
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb4uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c23"
          color="card.error.foreground"
          display="flex"
          height="11"
          width="11"
        >
          <div
            class="c18"
            display="flex"
          >
            <div
              class="c24"
              color="status.fail.foreground"
              display="flex"
              size="6"
            >
              <h3
                class="c7"
              >
                Er
              </h3>
            </div>
            <p
              class="c10"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Error
            </p>
          </div>
          <div
            class="c25"
          >
            <p
              class="c26"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              error for testing
            </p>
          </div>
          <div
            class="c27"
            display="flex"
          >
            <button
              class="c28"
              color="status.fail.foreground"
              font-size="3"
              height="100%"
              type="button"
            >
              Try again
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountSelector it renders the loading screen first 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c2 {
  display: inline-block;
  height: 48px;
  width: 48px;
  background-color: #5E26FF;
}

.c3 {
  display: inline-block;
  height: 24px;
  width: 24px;
  background-color: rgb(26,0,102);
  -webkit-animation-name: bvGDKI;
  animation-name: bvGDKI;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
    height="100vh"
  >
    <span
      class="c2"
    >
      <span
        class="c3"
      />
    </span>
    <h4
      class="c4"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Loading...
    </h4>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in redux with the investor copy when the investor prop is passed 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c24 {
  cursor: pointer;
  border: 1px solid core.nearblack;
  background-color: #1AD08F;
  border-color: core.nearblack;
  color: core.nearblack;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  border-color: #262626;
  border-width: 1px;
  border-radius: 4px;
  background-color: transparent;
  color: #262626;
  opacity: 1;
}

.c24:hover {
  opacity: 0.8;
}

.c8 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c23 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c27 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c11 {
  color: #5E26FF;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 32px;
  margin-bottom: 0;
}

.c12 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 8px;
}

.c22 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c28 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: left;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 800px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  color: #262626;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c13:hover {
  border-bottom: 2px solid #5E26FF;
}

.c25 {
  min-width: 0;
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 5rem;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c18 {
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c18:hover {
  background: hsla(0,0%,90%,1);
  opacity: 1;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <ul
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        color="core.nearblack"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          overflow="hidden"
          width="100%"
        >
          <div
            class="c5"
            display="flex"
          >
            <div
              class="c6"
              color="core.white"
              display="flex"
              size="6"
            >
              <h3
                class="c7"
              >
                Ac
              </h3>
            </div>
            <h2
              class="c8"
              color="core.primary"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              Select Account
            </h2>
          </div>
          <div
            class="c9"
          >
            <p
              class="c10"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Please select the Ledger account that owns your multisig wallet.
            </p>
            <p
              class="c11"
              color="core.primary"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Don't see an address you're looking for?
            </p>
            <p
              class="c12"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your Ledger Device generates different addresses depending on whether it's connected to the Filecoin testnet or mainnet.
              <a
                class="c13"
                color="core.primary"
                font-size="2"
                href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
      </li>
    </ul>
    <ul
      class="c14"
    >
      <li
        class="c15"
        display="flex"
      >
        <div
          class="c16"
          display="inline-block"
        >
          <div
            class="c17 c18"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c19"
              display="flex"
            >
              <div
                class="c20"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  0
                </h3>
              </div>
              <div
                class="c21"
                display="flex"
              >
                <p
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c23"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1z225 ... 6z6wgi
                </h2>
              </div>
            </div>
            <div
              class="c21"
              display="flex"
            >
              <p
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c23"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c16"
          display="inline-block"
        >
          <div
            class="c17 c18"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c19"
              display="flex"
            >
              <div
                class="c20"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  1
                </h3>
              </div>
              <div
                class="c21"
                display="flex"
              >
                <p
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c23"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb1uq
                </h2>
              </div>
            </div>
            <div
              class="c21"
              display="flex"
            >
              <p
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c23"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c16"
          display="inline-block"
        >
          <div
            class="c17 c18"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c19"
              display="flex"
            >
              <div
                class="c20"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  2
                </h3>
              </div>
              <div
                class="c21"
                display="flex"
              >
                <p
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c23"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb2uq
                </h2>
              </div>
            </div>
            <div
              class="c21"
              display="flex"
            >
              <p
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c23"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c16"
          display="inline-block"
        >
          <div
            class="c17 c18"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c19"
              display="flex"
            >
              <div
                class="c20"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  3
                </h3>
              </div>
              <div
                class="c21"
                display="flex"
              >
                <p
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c23"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb3uq
                </h2>
              </div>
            </div>
            <div
              class="c21"
              display="flex"
            >
              <p
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c23"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c16"
          display="inline-block"
        >
          <div
            class="c17 c18"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c19"
              display="flex"
            >
              <div
                class="c20"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  4
                </h3>
              </div>
              <div
                class="c21"
                display="flex"
              >
                <p
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c23"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb4uq
                </h2>
              </div>
            </div>
            <div
              class="c21"
              display="flex"
            >
              <p
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c23"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <button
          class="c24"
          color="core.nearblack"
          cursor="pointer"
          display="flex"
          font-size="3"
          height="11"
          opacity="1"
          type="button"
          width="11"
        >
          <div
            class="c25"
            font-size="7"
          >
            ＋
          </div>
          <ul
            class="c14"
          >
            <li
              class="c26"
              display="flex"
            >
              <h2
                class="c27"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                Create new account
              </h2>
            </li>
            <li
              class=""
            >
              <p
                class="c28"
                font-family="RT-Alias-Grotesk"
                font-size="2"
                font-weight="400"
              >
                Click here to create account #
                5
                .
              </p>
            </li>
          </ul>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in redux, and an option to create the next wallet 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c23 {
  cursor: pointer;
  border: 1px solid core.nearblack;
  background-color: #1AD08F;
  border-color: core.nearblack;
  color: core.nearblack;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  border-color: #262626;
  border-width: 1px;
  border-radius: 4px;
  background-color: transparent;
  color: #262626;
  opacity: 1;
}

.c23:hover {
  opacity: 0.8;
}

.c8 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c22 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c26 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c11 {
  color: #5E26FF;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c21 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c27 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: left;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 800px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  color: #262626;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c12:hover {
  border-bottom: 2px solid #5E26FF;
}

.c24 {
  min-width: 0;
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 5rem;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c17 {
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c17:hover {
  background: hsla(0,0%,90%,1);
  opacity: 1;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <ul
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        color="core.nearblack"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
          overflow="hidden"
          width="100%"
        >
          <div
            class="c5"
            display="flex"
          >
            <div
              class="c6"
              color="core.white"
              display="flex"
              size="6"
            >
              <h3
                class="c7"
              >
                Ac
              </h3>
            </div>
            <h2
              class="c8"
              color="core.primary"
              font-family="RT-Alias-Grotesk"
              font-size="4"
              font-weight="400"
            >
              Switch Accounts
            </h2>
          </div>
          <div
            class="c9"
          >
            <p
              class="c10"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
            </p>
            <p
              class="c11"
              color="core.primary"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Don't see an address you're looking for?
            </p>
            <p
              class="c10"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your seed phrase generates different addresses depending on whether it's connected to the Filecoin testnet or mainnet.
              <a
                class="c12"
                color="core.primary"
                font-size="2"
                href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
      </li>
    </ul>
    <ul
      class="c13"
    >
      <li
        class="c14"
        display="flex"
      >
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  0
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1z225 ... 6z6wgi
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  1
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb1uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  2
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb2uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  3
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb3uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c15"
          display="inline-block"
        >
          <div
            class="c16 c17"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c18"
              display="flex"
            >
              <div
                class="c19"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c7"
                >
                  4
                </h3>
              </div>
              <div
                class="c20"
                display="flex"
              >
                <p
                  class="c21"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c22"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk7 ... icb4uq
                </h2>
              </div>
            </div>
            <div
              class="c20"
              display="flex"
            >
              <p
                class="c21"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c22"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <button
          class="c23"
          color="core.nearblack"
          cursor="pointer"
          display="flex"
          font-size="3"
          height="11"
          opacity="1"
          type="button"
          width="11"
        >
          <div
            class="c24"
            font-size="7"
          >
            ＋
          </div>
          <ul
            class="c13"
          >
            <li
              class="c25"
              display="flex"
            >
              <h2
                class="c26"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                Create new account
              </h2>
            </li>
            <li
              class=""
            >
              <p
                class="c27"
                font-family="RT-Alias-Grotesk"
                font-size="2"
                font-weight="400"
              >
                Click here to create account #
                5
                .
              </p>
            </li>
          </ul>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`HelperText it renders the msig helper text correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Please select the Ledger account that owns your multisig wallet.
</p>
`;

exports[`HelperText it renders the non-msig, non-saft, ledger helper text correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Your single Ledger device creates hundreds of individual accounts. We're showing you the first 5.
</p>
`;

exports[`HelperText it renders the non-msig, non-saft, non-ledger helper text correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
</p>
`;
